2.4.0-alpha
* Updated dependencies
* New: Sidebar persists scope and filter
* New: Sidebar scope switcher
* Fix: Window position is more reliably restored (macOS)
* Fix: Command alette entries can now also be clicked
* New: Layout of sidebar and properties panel
* New: Toolbar
* New: Markers
* New: Support different coordinate formats
* New: WGS84 Graticule
* New: (View Menu) Show Toolbar/Sidebar

2.3.0-alpha
* Updated dependencies
* project database: improved schema and data organizaiton
* improved FTS efficiency
* lock layers and feature (prevents modification)
* Fix: Support web links as documents

2.1.0-alpha
* Fix: Card: Layout issue for long names (#10)
* Fix: Hostility Status is missing by Mobility/Survivability (#11)
* Fix: Weapons Free Zone (WFZ) is displayed only as a normal area (#15)
* Fix: Area symbols missing (#21)
* New: Feature Bridgehead (Line) (#24)
* New: Aligned labeling for Holding/Release Line with 2525D  (#24)
* New: Support Circular Areas (#25)
* New: Support Rectangular Areas (#26)
* Fix: Phase Line labels (#22)
* Fix: Improved highlighting (#19, #23)
* New: Ambush (#17)
* New: Support by Fire Position (#28)
* New: Principal Direction of Fire (#27)
* Fix: Decoy Mined Area (#12)
* Fix: Decoy Mined Area (, Fenced) (#12)
* Fix: Airfield Zone (#14)
* Fix: Crash when cancelling clone feature (#9)

0.0.2
* Added some command to edit text modifiers to command palette.

0.0.1
* Removed snap interaction due to update issue.
* Boundaries/Echelons are no displayed.
* Fix: FTS issue with leading numbers in filter.
* Highlight layers/features; Mouse down/up on scope tags. Supports multiselect.
* Fix: Direction of Attack as Multi-point, n >= 2 (#7)
* Updated dependencies
  - @babel/eslint-parser @ 7.15.7
  - electron @ 14.0.1
  - eslint-plugin-react @ 7.25.2
  - webpack @ 5.53.0
  - webpack-dev-server @ 4.2.1

0.0.0
* Sidebar/list - Changed editing behavior:
  - Removed mouse over/hover effect on option title