@@ -3,7 +3,7 @@ import globalCommands from './commands/GlobalCommands'
 import undoCommands from './commands/UndoCommands'
 import clipboardCommands from './commands/ClipboardCommands'
 import layerCommands from './commands/LayerCommands'
-import markerCommands from './commands/MarkerCommands'
+import creationCommand from './commands/CreationCommands'
 
 /**
  *
@@ -14,7 +14,7 @@ export function CommandRegistry (services) {
   Object.assign(this, clipboardCommands(services))
   Object.assign(this, undoCommands(services))
   Object.assign(this, layerCommands(services))
-  Object.assign(this, markerCommands(services))
+  Object.assign(this, creationCommand(services))
 
   this.VIEW_CREATE = {
     label: 'Create View'
