@@ -128,3 +128,18 @@ DocumentStore.prototype.marker = function (id, marker, cache) {
     tags
   }
 }
+
+/**
+ *
+ */
+DocumentStore.prototype.bookmark = function (id, bookmark, cache) {
+  const name = bookmark.name || ''
+  const tags = cache(ID.tagsId(id)) || []
+
+  return {
+    id,
+    scope: 'bookmark',
+    text: name,
+    tags
+  }
+}
